--- a/_includes/cblock.html
+++ b/_includes/cblock.html
@@ -1,3 +1,5 @@
+
+<!-- include cblock.html -->
 {% comment %}<!--
 
 Layout of a single 'cblock'.
@@ -15,3 +17,4 @@ Parameters:
 	<p class="cblock-name"><a href={{ include.link }}>{{ include.name }}</a></p>
 	<p class="cblock-description">{{ include.description }}</p>
 </div>
+<!-- end of include cblock.html -->
