--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,16 @@
-{% comment %}<!--
+
+<!-- include footer.html -->
+{%- comment -%}<!--
 
 Layout of the footer.
 
 Configuration:
 	site.description: The text to be displayed.
 
--->{%- endcomment -%}
-
+-->{%- endcomment %}
 <footer>
 	<div>
 		<p>{{ site.description | escape }}</p>
 	</div>
 </footer>
+<!-- end of include footer.html -->
