--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,3 +1,5 @@
+
+<!-- include google-analytics.html -->
 {% comment %}<!--
 
 The script that allows the use of google analytics.
@@ -6,7 +8,6 @@ Configuration:
 	site.google_analytics: The site-id for the site issued by google analytics.
 
 -->{%- endcomment -%}
-
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -17,4 +18,5 @@ Configuration:
   ga('send', 'pageview');
 
 </script>
-  
+<!-- end of include google-analytics.html -->
+
