--- a/_includes/menubar-icon.html
+++ b/_includes/menubar-icon.html
@@ -1,4 +1,6 @@
-{% comment %}<!--
+
+<!-- include menubar-icon.html -->
+{%- comment -%}<!--
 
 This file is for customization of the menubar icon.
 
@@ -16,5 +18,6 @@ Example: <div class='myclass display-block-narrow'><p>Hello</p></div>
 
 Will display the text "Hello" only when the narrow layout is in use.
 
--->{%- endcomment -%}
+-->{%- endcomment %}
 <div class="menubar-icon"></div>
+<!-- end of include menubar-icon.html -->
