--- a/_includes/widgets/social-media-res/icon-github.html
+++ b/_includes/widgets/social-media-res/icon-github.html
@@ -1,1 +1,7 @@
-<a href="https://github.com/{{ include.username }}"><span class="icon icon--github">{% include widgets/social-media-res/icon-github.svg %}</span><span class="username">{{ include.username }}</span></a>
+
+<!-- include icon-github.html -->
+<a href="https://github.com/{{ include.username }}">
+	<span class="icon icon--github">{%- include widgets/social-media-res/icon-github.svg -%}</span>
+	<span class="username">{{ include.username }}</span>
+</a>
+<!-- end of include icon-github.html -->
