--- a/_includes/widgets/youtube-player.html
+++ b/_includes/widgets/youtube-player.html
@@ -1,3 +1,5 @@
+
+<!-- include youtube-player.html for {{include.video}} -->
 {%- comment -%}<!--
 
 Purpose:
@@ -31,6 +33,6 @@ Also needs the following CSS (written in SASS, included in `_sass/_widgets.scss`
 	}
 }
 
--->{%- endcomment -%}
-
+-->{%- endcomment %}
 <div class="scaling-iframe-wrapper-hd"><iframe src="https://www.youtube.com/embed/{{ include.video }}"></iframe></div>
+<!-- end of include youtube-player.html -->
