--- a/_includes/banner-area.html
+++ b/_includes/banner-area.html
@@ -1,4 +1,6 @@
-{% comment %}<!--
+
+<!-- include banner-area.html -->
+{%- comment -%}<!--
 
 Layout of the banner area.
 
@@ -18,26 +20,30 @@ If changes are made to this file that increase the height of the banner-area tha
 	{%- assign banner-classes = 'banner-area banner-area-outside-dom' -%}
 {%- else -%}
 	{% assign banner-classes = 'banner-area banner-area-in-dom' -%}
-{%- endif -%}
-
+{%- endif %}
 <input type="checkbox" id="banner-menu-symbol">
 <div class="{{ banner-classes }}">
 	<div class="banner"></div>
-	<!-- The following elements are permanently outside the DOM -->
-	<div class="icon-container">{%- include banner-icon.html -%}</div>
-	<div class="title-area-container">{%- include banner-title-area.html -%}</div>
+	{%- comment -%}<!-- The following elements are permanently outside the DOM -->{%- endcomment %}
+	<div class="icon-container">
+		{% include banner-icon.html %}
+	</div>
+	<div class="title-area-container">
+		{% include banner-title-area.html %}
+	</div>
 	<div class="label-container"><label for="banner-menu-symbol"><p><!-- empty but necessary! --></p></label></div>
-	<!-- This is part of the DOM again (unless the banner area is outside the DOM) -->
+	{%- comment -%}<!-- This is part of the DOM again (unless the banner area is outside the DOM) -->{%- endcomment %}
 	<div class="menubar-top-separator"></div>
-	{%- include menubar.html -%}
+	{% include menubar.html %}
 	<div class="menubar-bottom-separator"></div>
 </div>
-{%- if site.data.setup.banner-position == 'top-fixed' -%}
-	<div class="banner-area invisible">
-		<div class="banner"></div>
-		<div class="menubar-top-separator"></div>
-		{%- include menubar.html -%}
-		<div class="menubar-bottom-separator"></div>
-		<div class="add-to-banner-area-height"></div>
-	</div>
-{%- endif -%}
+{%- if site.data.setup.banner-position == 'top-fixed' %}
+<div class="banner-area invisible">
+	<div class="banner"></div>
+	<div class="menubar-top-separator"></div>
+	{% include menubar.html %}
+	<div class="menubar-bottom-separator"></div>
+	<div class="add-to-banner-area-height"></div>
+</div>
+{% endif -%}
+<!-- end of include banner-area.html -->
