--- a/_includes/banner-icon.html
+++ b/_includes/banner-icon.html
@@ -1,4 +1,6 @@
-{% comment %}<!--
+
+<!-- include banner-icon.html -->
+{%- comment -%}<!--
 
 This file is for customization of the banner icon.
 
@@ -16,5 +18,6 @@ Example: <div class='myclass display-block-narrow'><p>Hello</p></div>
 
 Will display the text "Hello" only when the narrow layout is in use.
 
--->{%- endcomment -%}
+-->{%- endcomment %}
 <div class="banner-icon"></div>
+<!-- end of include banner-icon.html -->
