--- a/_includes/banner-title-area.html
+++ b/_includes/banner-title-area.html
@@ -1,4 +1,6 @@
-{% comment %}<!--
+
+<!-- include banner-title-area.html -->
+{%- comment -%}<!--
 
 This file is for customization of the title and subtitle in the banner.
 
@@ -16,7 +18,7 @@ Example: <div class='myclass display-block-narrow'><p>Hello</p></div>
 
 Will display the text "Hello" only when the narrow layout is in use.
 
--->{%- endcomment -%}
+-->{%- endcomment %}
 <div class="title-area">
 	<div class="title">
 		<p>{{ site.title }}</p>
@@ -25,3 +27,4 @@ Will display the text "Hello" only when the narrow layout is in use.
 		<p>{{ site.data.setup.subtitle }}</p>
 	</div>
 </div>
+<!-- end of include banner-title-area.html -->
