--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,5 @@
+
+<!-- include head.html -->
 {%- comment -%}<!--
 
 Layout of the header included in all html pages.
@@ -19,14 +21,13 @@ Configuration:
 	site.data.setup.enable-cookies-policy: Used to determine if the cookies consent must be used.
 	site.google_analytics: Used to determine if google-analytics must be used.
 	
--->{%- endcomment -%}
-
+-->{%- endcomment %}
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	{%- if site.data.setup.realfavicongenerator -%}
+	{%- if site.data.setup.realfavicongenerator %}
 	<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
@@ -35,11 +36,11 @@ Configuration:
 	<link rel="shortcut icon" href="/icons/favicon.ico">
 	<meta name="msapplication-config" content="/icons/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
-	{%- endif -%}
+	{%- endif %}
 
 	<title>{%- if page.title -%}{{ page.title | escape }}{%- else -%}{{ site.title | escape }}{%- endif -%}</title>
 
-	{%- if page.excerpt -%}{%- assign description = page.excerpt -%}{%- else -%}{%- assign description = site.description -%}{%- endif -%}
+	{%- if page.excerpt -%}{%- assign description = page.excerpt -%}{%- else -%}{%- assign description = site.description -%}{%- endif %}
 
 	<meta name="description" content="{{ description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
@@ -47,22 +48,23 @@ Configuration:
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
-	<!-- Include JQuery from google -->
-	{%- if site.data.setup.use-separate-banner-menubar-file and site.data.setup.drop-down-menu -%}
+	{%- comment -%}<!-- Include JQuery from google -->{%- endcomment -%}
+	
+	{%- if site.data.setup.use-separate-banner-menubar-file %}
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  	{% endif %}
+  	{%- endif -%}
 
-	<!-- Include google analytics for production build and if necessary -->
+	{%- comment -%}<!-- Include google analytics for production build and if necessary -->{%- endcomment -%}
+	
 	{%- if jekyll.environment == 'production' and site.google_analytics -%}
 		{%- include google-analytics.html -%}
-	{% endif %}
+	{%- endif -%}
 
-	<!-- Include cookie consent for production build when enabled -->
+	{%- comment -%}<!-- Include cookie consent for production build when enabled -->{%- endcomment -%}
 	{%- if jekyll.environment == 'production' -%}
 		{%- if site.data.setup.enable-cookies-policy -%}
 			{%- include widgets/cookie-consent.html -%}
 	{%- endif -%}
-	{% endif %}
-
+	{%- endif %}
 </head>
-
+<!-- end of include head.html -->
