--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -1,37 +1,33 @@
-{% comment %}<!--
 
-Builds a menubar for use in the banner-area.
-	
--->{%- endcomment -%}
-
+<!-- include menubar.html -->
 <nav class="menubar">
 
-	<!-- include the menu icon -->
+	{%- comment -%}<!-- include the menu icon -->{%- endcomment -%}
+	
 	{%- include menubar-icon.html -%}
 	
-	<!-- Create a list of top menu item titles -->
+	{%- comment -%}<!-- Create a list of top menu item titles -->{%- endcomment -%}
+	
 	{%- assign topTitles = "" | split: "" -%}
 	{%- assign sortedPages = site.pages | where:'menuInclude', true | where_exp:'item', 'item.menuTopTitle != nil' | sort: 'menuTopIndex', 'last' -%}
 	{%- for ape in sortedPages -%}{%- assign topTitles = topTitles | push: ape.menuTopTitle -%}{%- endfor -%}
 	{%- assign topTitles = topTitles | uniq -%}
 
-	<!-- Home page -->
+	{%- comment -%}<!-- Home page -->{%- endcomment -%}
 	{%- assign home = 'Home' -%}
 	{%- if site.data.text-for.tHome -%}{%- assign home = site.data.text-for.tHome -%}{%- endif -%}
-	{%- if page.url == '/' -%}
-		<div class="item isActiveSelection">
-	{%- else -%}
-		<div class="item">
-	{%- endif -%}
-			<div class="title">
-				<label class="symbol"><p></p></label>
-				<div class="text">
-					<a href="{{ site.url }}{{ site.baseurl }}"><p>{{ home }}</p></a>
-				</div>
-			</div>
+	{%- if page.url == '/' %}
+	<div class="item isActiveSelection">
+	{%- else %}
+	<div class="item">
+	{%- endif %}
+		<div class="title">
+			<label class="symbol"><p></p></label>
+			<div class="text"><a href="{{ site.url }}{{ site.baseurl }}"><p>{{ home }}</p></a></div>
 		</div>
+	</div>
 	
-	<!-- Page menus -->
+	{%- comment -%}<!-- Page menus -->{%- endcomment -%}
 	{%- for topTitle in topTitles -%}
 
 		{%- if jekyll.environment != 'production' and site.data.setup.fast-content-build -%}{%- else -%}
@@ -129,40 +125,42 @@ Builds a menubar for use in the banner-area.
 				{%- endif -%}
 			{%- endfor -%}
 
-		{%- endif -%}
+		{%- endif %}
+	<div class="item-separator"><p><!-- empty but necessary --></p></div>
 		
-		<div class="item-separator"><p><!-- empty but necessary --></p></div>
+		{%- comment -%}<!-- If the menu selection and active page are the same, show it -->{%- endcomment -%}
 		
-		<!-- If the menu selection and active page are the same, show it -->
 		{%- if page.menuTopTitle == topTitle  -%}
-			{%- if page.menuLink == false -%}
-				<div class="item">
-			{%- else -%}
-				<div class="item isActiveSelection">
+			{%- if page.menuLink == false %}
+	<div class="item">
+			{%- else %}
+	<div class="item isActiveSelection">
 			{%- endif -%}
-		{%- else -%}
-			<div class="item">
+		{%- else %}
+	<div class="item">
 		{%- endif -%}
 
-			<!-- Create top menu item -->
-			<input type="checkbox" id="{{ topTitle | append:'-checkbox'}}">
-			<div class="title">
-				<label class="symbol" for="{{ topTitle | append:'-checkbox'}}">
-					{%- if sortedSubMenuTitles.size > 0 -%}
-						<p class="code"><!-- will be filled by disclosure indicator --></p>
-					{%- else -%}
-						<p></p>
-					{%- endif -%}
-				</label>
-				<div class="text">
-					<!-- Find page to link to -->
+			{%- comment -%}<!-- Create top menu item -->{%- endcomment %}
+		<input type="checkbox" id="{{ topTitle | append:'-checkbox'}}">
+		<div class="title">
+			<label class="symbol" for="{{ topTitle | append:'-checkbox'}}">
+					{%- if sortedSubMenuTitles.size > 0 %}
+				<p class="code"><!-- will be filled by disclosure indicator --></p>
+					{%- else %}
+				<p></p>
+					{%- endif %}
+			</label>
+			<div class="text">
+					
+					{%- comment -%}<!-- Find page to link to -->{%- endcomment -%}
+					
 					{%- assign pageFound = false -%}
 					{%- for ape in site.pages -%}
 						{%- if ape.menuTopTitle == topTitle and ape.menuSubTitle == nil and ape.menuSubs == nil -%}
-							{%- if ape.menuLink == false -%}
-								<p class="paddingAsLink">{{ topTitle }}</p>
-							{%- else -%}
-								<a href="{{ ape.url }}"><p>{{ topTitle }}</p></a>
+							{%- if ape.menuLink == false %}
+				<p class="paddingAsLink">{{ topTitle }}</p>
+							{%- else %}
+				<a href="{{ ape.url }}"><p>{{ topTitle }}</p></a>
 							{%- endif -%}
 							{%- assign pageFound = true -%}
 							{%- break -%}
@@ -171,35 +169,36 @@ Builds a menubar for use in the banner-area.
 					{%- if pageFound == false -%}
 						{%- for ape in site.pages -%}
 							{%- if ape.menuTopTitle == topTitle and ape.menuTopIndex -%}
-								{%- if ape.menuLink == false -%}
-									<p class="paddingAsLink">{{ topTitle }}</p>
-								{%- else -%}
-									<a href="{{ ape.url }}"><p>{{ topTitle }}</p></a>
+								{%- if ape.menuLink == false %}
+				<p class="paddingAsLink">{{ topTitle }}</p>
+								{%- else %}
+				<a href="{{ ape.url }}"><p>{{ topTitle }}</p></a>
 								{%- endif -%}
 								{%- assign pageFound = true -%}
 								{%- break -%}
 							{%- endif -%}
 						{%- endfor -%}
-						{%- if pageFound == false -%}
-							<p class="paddingAsLink">{{ topTitle }}</p>
+						{%- if pageFound == false %}
+				<p class="paddingAsLink">{{ topTitle }}</p>
 						{%- endif -%}
-					{%- endif -%}
-				</div>
+					{%- endif %}
 			</div>
+		</div>
 				
 
 			{%- if jekyll.environment != 'production' and site.data.setup.fast-content-build -%}{%- else %}
 				
-				<!-- Create sub menu items -->
+				{%- comment -%}<!-- Create sub menu items -->{%- endcomment -%}
+				
 				{% if sortedSubMenuTitles.size > 0 -%}
-					{%- if site.data.setup.drop-down-menu -%}
-					<div class="dropdown">
-					{%- else -%}
-					<div class="dropdown-narrow">
+					{%- if site.data.setup.drop-down-menu %}
+		<div class="dropdown">
+					{%- else %}
+		<div class="dropdown-narrow">
 					{%- endif -%}
 						{%- for subMenuTitle in sortedSubMenuTitles %}
 						
-							<!-- Now build the sub-sub menu tables for {{ subMenuTitle }} -->
+							{%- comment -%}<!-- Build the sub-sub tables for {{ subMenuTitle }} -->{%- endcomment -%}
 						
 							{% assign subsubMenuTitles = "" | split: "" -%}
 							{%- assign subsubMenuIndexes = "" | split: "" -%}
@@ -207,16 +206,11 @@ Builds a menubar for use in the banner-area.
 							{%- assign subsubMenuLinks = "" | split: "" -%}
 
 							{%- for ape in titlePages %}
-							<!-- 001 ape.url = {{ ape.url }} -->
 								{%- if ape.menuSubs != nil %}
-							<!-- 002 ape.url = {{ ape.url }} -->
 									{%- for sub in ape.menuSubs -%}
 										{%- if sub.title == subMenuTitle %}
-							<!-- 003 sub.title = {{ sub.title }} -->
 											{%- if sub.sub != nil %}
-							<!-- 004 sub.sub not nil -->
 												{%- for subsub in sub.sub %}
-							<!-- 005 subsub.title = {{ subsub.title }} -->
 													{%- assign subsubMenuTitles = subsubMenuTitles | push: subsub.title -%}
 													{%- if subsub.index != nil -%}
 														{%- assign subsubMenuIndexes = subsubMenuIndexes | push: subsub.index -%}
@@ -249,8 +243,8 @@ Builds a menubar for use in the banner-area.
 								{%- endif -%}
 							{%- endfor %}
 
-							<!-- 006 subsubMenuTitles.size = {{ subsubMenuTitles.size }} -->
-							<!-- Sort all 4 the lists based on the index of the subMenu that was read -->
+							{%- comment -%}<!-- Sort all 4 the lists based on the index of the subMenu that was read -->{%- endcomment -%}
+							
 							{% assign sortedSubsubMenuTitles = "" | split: "" -%}
 							{%- assign sortedSubsubMenuIndexes = subsubMenuIndexes | sort -%}
 							{%- assign sortedSubsubMenuUrls = "" | split: "" -%}
@@ -276,161 +270,159 @@ Builds a menubar for use in the banner-area.
 									{%- continue -%}
 								{%- endif -%}
 							{%- endfor %}
-							<!-- 007 sortedSubsubMenuTitles.size = {{ sortedSubsubMenuTitles.size }} -->
 
-							<!-- Create the sub menu -->
-							<div class="subitem-separator"><p></p></div>
-							{% if sortedSubMenuLinks[forloop.index0] != false -%}
-								{%- if sortedSubMenuUrls[forloop.index0] == page.url -%}
-								<div class="subitem isActiveSelection">
+							{%- comment -%}<!-- Create the sub menu -->{%- endcomment %}
+			<div class="subitem-separator"><p></p></div>
+							{%- if sortedSubMenuLinks[forloop.index0] != false -%}
+								{%- if sortedSubMenuUrls[forloop.index0] == page.url %}
+			<div class="subitem isActiveSelection">
 								{%- else -%}
 									{%- assign urlFound = false -%}
 									{%- for url in sortedSubSubMenuUrls -%}
 										{%- if url == page.url -%}{%- assign urlFound = true -%}{%- endif -%}
 									{%- endfor -%}
-									{%- if urlFound -%}
-								<div class="subitem isActiveSelection">
-									{%- else -%}
-								<div class="subitem">
+									{%- if urlFound %}
+			<div class="subitem isActiveSelection">
+									{%- else %}
+			<div class="subitem">
 									{%- endif -%}
-								{%- endif -%}
-									<input type="checkbox" id="{{ subMenuTitle | append:'-checkbox'}}">
-									<div class="title">
-										<label class="symbol" for="{{ subMenuTitle | append:'-checkbox'}}">
-											{%- if sortedSubsubMenuTitles.size > 0 -%}
-												<p class="code"><!-- will be filled by disclosure indicator --></p>
-											{%- else -%}
-												<p></p>
-											{%- endif -%}
-										</label>
-										<div class="text">
-											<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
-										</div>
-									</div><!-- title -->
+								{%- endif %}
+				<input type="checkbox" id="{{ subMenuTitle | append:'-checkbox'}}">
+				<div class="title">
+					<label class="symbol" for="{{ subMenuTitle | append:'-checkbox'}}">
+									{%- if sortedSubsubMenuTitles.size > 0 %}
+						<p class="code"><!-- will be filled by disclosure indicator --></p>
+									{%- else %}
+						<p></p>
+									{%- endif %}
+					</label>
+					<div class="text">
+						<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+					</div>
+				</div>
 							{%- else -%}
 								{%- assign urlFound = false -%}
 								{%- for url in sortedSubSubMenuUrls -%}
 									{%- if url == page.url -%}{%- assign urlFound = true -%}{%- endif -%}
 								{%- endfor -%}
-								{%- if urlFound -%}
-									<div class="subitem isActiveSelection">
-								{%- else -%}
-									<div class="subitem">
-								{%- endif -%}
-										<input type="checkbox" id="{{ subMenuTitle | append:'-checkbox'}}">
-										<div class="title">
-											<label class="symbol" for="{{ subMenuTitle | append:'-checkbox'}}">
-												{%- if sortedSubsubMenuTitles.size > 0 -%}
-												<p class="code"><!-- will be filled by disclosure indicator --></p>
-												{%- else -%}
-												<p></p>
-												{%- endif -%}
-											</label>
-											<div class="text"><p class="paddingAsLink">{{ subMenuTitle }}</p></div>
-										</div><!-- title -->
+								{%- if urlFound %}
+			<div class="subitem isActiveSelection">
+								{%- else %}
+			<div class="subitem">
+								{%- endif %}
+				<input type="checkbox" id="{{ subMenuTitle | append:'-checkbox'}}">
+				<div class="title">
+					<label class="symbol" for="{{ subMenuTitle | append:'-checkbox'}}">
+									{%- if sortedSubsubMenuTitles.size > 0 %}
+						<p class="code"><!-- will be filled by disclosure indicator --></p>
+									{%- else %}
+						<p></p>
+									{%- endif %}
+					</label>
+					<div class="text"><p class="paddingAsLink">{{ subMenuTitle }}</p></div>
+				</div>
 							{%- endif -%}
 							
-							<!-- sub sub menu item build -->
-							<!-- 008 sortedSubsubMenuTitles.size = {{ sortedSubsubMenuTitles.size }} -->
+							{%- comment -%}<!-- sub sub menu item build -->{%- endcomment -%}
 
 							{% if sortedSubsubMenuTitles.size > 0 -%}
-								{%- if site.data.setup.drop-down-menu -%}
-										<div class="sub-dropdown">
-								{%- else -%}
-										<div class="sub-dropdown-narrow">
+								{%- if site.data.setup.drop-down-menu %}
+				<div class="sub-dropdown">
+								{%- else %}
+				<div class="sub-dropdown-narrow">
 								{%- endif -%}
-								{%- for subsubMenuTitle in sortedSubsubMenuTitles -%}
-											<div class="subsubitem-separator"><p></p></div>
-							<!-- 009 sortedSubsubMenuLinks[forloop.index0] = {{ sortedSubsubMenuLinks[forloop.index0] }} -->
+								{%- for subsubMenuTitle in sortedSubsubMenuTitles %}
+					<div class="subsubitem-separator"><p></p></div>
 										{%- if sortedSubsubMenuLinks[forloop.index0] != false -%}
-							<!-- 010 sortedSubsubMenuUrls[forloop.index0] = {{ sortedSubsubMenuUrls[forloop.index0] }} -->
-											{%- if sortedSubsubMenuUrls[forloop.index0] == page.url -%}
-											<div class="subsubitem isActiveSelection">
-											{%- else -%}
-											<div class="subsubitem">
-											{%- endif -%}
-												<div class="title">
-													<div class="symbol"><p></p></div>
-													<div class="text">
-														<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubMenuTitle }}</p></a>
-													</div>
-												</div><!-- title -->
-										{%- else -%}
-											<div class="subsubitem">
-												<div class="title">
-													<div class="symbol"><p></p></div>
-													<div class="text"><p class="paddingAsLink">{{ subsubMenuTitle }}</p></div>
-												</div><!-- title -->
-										{%- endif -%}
-											</div><!-- subsubitem -->
-								{%- endfor -%}
-									</div><!-- sub-dropdown -->
-							{%- endif -%}
-							
-							</div><!-- subitem -->
-						{%- endfor -%}
-					</div>			
+											{%- if sortedSubsubMenuUrls[forloop.index0] == page.url %}
+					<div class="subsubitem isActiveSelection">
+											{%- else %}
+					<div class="subsubitem">
+											{%- endif %}
+						<div class="title">
+							<div class="symbol"><p></p></div>
+							<div class="text">
+								<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubMenuTitle }}</p></a>
+							</div>
+						</div>
+										{%- else %}
+					<div class="subsubitem">
+						<div class="title">
+							<div class="symbol"><p></p></div>
+							<div class="text"><p class="paddingAsLink">{{ subsubMenuTitle }}</p></div>
+						</div>
+										{%- endif %}
+					</div>
+								{%- endfor %}
+				</div>
+							{%- endif %}
+			</div>
+						{%- endfor %}
+		</div>			
 				{%- endif -%}
-			{%- endif -%}
-		</div>
+			{%- endif %}
+	</div>
 	{%- endfor -%}
 
 
-	<!-- Categories menu -->
+	{%- comment -%}<!-- Categories menu -->{%- endcomment -%}
+	
 	{%- if jekyll.environment != 'production' and site.data.setup.fast-content-build -%}{%- else -%}
 		{%- if site.data.setup.generate-categories-menu -%}
 			{%- assign cats = site.pages | where:'layout', 'category-page' | sort:'title' -%}
 			{%- if cats.size > 0 -%}
 				{%- assign categories = 'Categories' -%}
-				{%- if site.data.text-for.tCategories -%}{%- assign categories = site.data.text-for.tCategories -%}{%- endif 		-%}
-				<div class="item-separator"><p><!-- empty but necessary --></p></div>
-				<!-- Check if a category page is selected -->
+				{%- if site.data.text-for.tCategories -%}{%- assign categories = site.data.text-for.tCategories -%}{%- endif %}
+	<div class="item-separator"><p><!-- empty but necessary --></p></div>
+				
+				{%- comment -%}<!-- Check if a category page is selected -->{%- endcomment -%}
+				
 				{%- assign selected = false -%}
 				{%- for cat in cats -%}{%- if cat.url == page.url -%}{%- assign selected = true -%}{%- endif -%}{%- endfor -%}
 				{%- if selected -%}
-					{%- if site.data.setup.drop-down-menu -%}
-						<div class="item isActiveSelection">
-					{%- else -%}
-						<div class="item-narrow-only isActiveSelection">
+					{%- if site.data.setup.drop-down-menu %}
+	<div class="item isActiveSelection">
+					{%- else %}
+	<div class="item-narrow-only isActiveSelection">
 					{%- endif -%}
 				{%- else -%}
-					{%- if site.data.setup.drop-down-menu -%}
-						<div class="item">
-					{%- else -%}
-						<div class="item-narrow-only">
+					{%- if site.data.setup.drop-down-menu %}
+	<div class="item">
+					{%- else %}
+	<div class="item-narrow-only">
 					{%- endif -%}
-				{%- endif -%}
-					<input type="checkbox" id="category-checkbox">
-					<div class="title">
-						<label class="symbol" for="category-checkbox">
-							{%- if cats.size > 0 -%}
-								<p class="code"><!-- will be filled by disclosure indicator --></p>
+				{%- endif %}
+		<input type="checkbox" id="category-checkbox">
+		<div class="title">
+			<label class="symbol" for="category-checkbox">
+							{%- if cats.size > 0 %}
+				<p class="code"><!-- will be filled by disclosure indicator --></p>
 							{%- else -%}
-								<p></p>
+				<p></p>
 							{%- endif -%}
-						</label>
-						<div class="text"><p class="paddingAsLink">{{ categories }}</p></div>
-					</div>
-	
-					<div class="dropdown">
-						{%- for cat in cats -%}
-							<div class="subitem-separator"><p></p></div>
-							{%- if cat.url == page.url -%}
-								<div class="subitem isActiveSelection">
-							{%- else -%}
-								<div class="subitem">
-							{%- endif -%}
-									<div class="title">
-										<div class="symbol"></div>
-										<div class="text">
-											<a href="{{ cat.url }}"><p>{{ cat.title | capitalize }}</p></a>
-										</div>
-									</div>
-								</div>
-						{%- endfor -%}
+			</label>
+			<div class="text"><p class="paddingAsLink">{{ categories }}</p></div>
+		</div>
+		<div class="dropdown">
+						{%- for cat in cats %}
+			<div class="subitem-separator"><p></p></div>
+							{%- if cat.url == page.url %}
+			<div class="subitem isActiveSelection">
+							{%- else %}
+			<div class="subitem">
+							{%- endif %}
+				<div class="title">
+					<div class="symbol"></div>
+					<div class="text">
+						<a href="{{ cat.url }}"><p>{{ cat.title | capitalize }}</p></a>
 					</div>
 				</div>
+			</div>
+						{%- endfor %}
+		</div>
+	</div>
 			{%- endif -%}
 		{%- endif -%}
-	{%- endif -%}
+	{%- endif %}
 </nav>
+<!-- end of include menubar.html -->
