--- a/_includes/vertical-menu.html
+++ b/_includes/vertical-menu.html
@@ -1,6 +1,8 @@
+
+<!-- include vertical-menu.html -->
 {%- if jekyll.environment != 'production' and site.data.setup.fast-content-build -%}{%- else -%}
 
-<!-- Get the top menu item for which to create the menu -->
+{%- comment -%}<!-- Get the top menu item for which to create the menu -->{%- endcomment -%}
 {%- if page.menuTopTitle -%}
 	{%- assign topTitle = page.menuTopTitle -%}
 {%- else -%}
@@ -8,13 +10,14 @@
 	{%- assign home = 'Home' -%}
 	{%- if site.data.text-for.tHome -%}{%- assign home = site.data.text-for.tHome -%}{%- endif -%}
 	{%- assign topTitle = home -%}
-{%- endif -%}
+{%- endif %}
 
 <nav class="vmenu-container">
-<div class="topTitle"><h1>{{ topTitle }}</h1></div>
-<div class="vmenu">
+	<div class="topTitle"><h1>{{ topTitle }}</h1></div>
+	<div class="vmenu">
 
-	<!-- Find all pages that belong to the menuTopTitle of this page -->
+	{%- comment -%}<!-- Find all pages that belong to the menuTopTitle of this page -->{%- endcomment -%}
+	
 	{%- assign topTitlePages = site.pages | where:'menuInclude', true | where:'menuTopTitle', topTitle -%}
 			
 	{%- comment -%}<!-- note: these html comment tags are for editor coloring support
@@ -31,7 +34,8 @@
 			
 	-->{%- endcomment -%}
 						
-	<!-- Find all sub menu entries on the topTitlePages -->
+	{%- comment -%}<!-- Find all sub menu entries on the topTitlePages -->{%- endcomment -%}
+	
 	{%- assign subMenuTitles = "" | split: "" -%}
 	{%- assign subMenuIndexes = "" | split: "" -%}
 	{%- assign subMenuUrls = "" | split: "" -%}
@@ -83,7 +87,8 @@
 		{%- endif -%}
 	{%- endfor -%}
 
-	<!-- Sort all 4 the lists based on the index of the subMenu that was read -->
+	{%- comment -%}<!-- Sort all 4 the lists based on the index of the subMenu that was read -->{%- endcomment -%}
+	
 	{%- assign sortedSubMenuTitles = "" | split: "" -%}
 	{%- assign sortedSubMenuIndexes = subMenuIndexes | sort -%}
 	{%- assign sortedSubMenuUrls = "" | split: "" -%}
@@ -114,7 +119,7 @@
 
 	{%- for subMenuTitle in sortedSubMenuTitles -%}
 	
-		<!-- Repeat the above, but now for the submenu title, building the subsub menu tables -->
+		{%- comment -%}<!-- Repeat the above, for the submenu title, building the subsub menu -->{%- endcomment -%}
 
 		{%- assign subsubMenuTitles = "" | split: "" -%}
 		{%- assign subsubMenuIndexes = "" | split: "" -%}
@@ -159,7 +164,8 @@
 			{%- endif -%}
 		{%- endfor -%}
 
-		<!-- Sort all 4 the lists based on the index of the subMenu that was read -->
+		{%- comment -%}<!-- Sort all 4 the lists based on the index of the subMenu that was read -->{%- endcomment -%}
+		
 		{%- assign sortedSubsubMenuTitles = "" | split: "" -%}
 		{%- assign sortedSubsubMenuIndexes = subsubMenuIndexes | sort -%}
 		{%- assign sortedSubsubMenuUrls = "" | split: "" -%}
@@ -184,101 +190,95 @@
 				{%- assign sortedSubsubMenuLinks = sortedSubsubMenuLinks | push: subsubMenuLinks[forloop.index0] -%}
 				{%- continue -%}
 			{%- endif -%}
-		{%- endfor %}
-
+		{%- endfor %}		
 		<div class="subitem">
 		
-			<!-- Sub menu item -->
-			{% if sortedSubsubMenuTitles.size == 0 -%}
+			{%- comment -%}<!-- Sub menu item -->{%- endcomment -%}
+			
+			{%- if sortedSubsubMenuTitles.size == 0 -%}
 				{%- if sortedSubMenuLinks[forloop.index0] != false -%}
-					{%- if sortedSubMenuUrls[forloop.index0] == page.url -%}
-						<div class="sub-isActivePage">
-							<div class="disclosure"><p></p></div>
-							<div class="title">
-								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
-							</div>
-						</div>
-					{%- else -%}
-						<div class="sub-hasLink">
-							<div class="disclosure"><p></p></div>
-							<div class="title">
-								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
-							</div>
-						</div>
+					{%- if sortedSubMenuUrls[forloop.index0] == page.url %}
+			<div class="sub-isActivePage">
+				<div class="disclosure"><p></p></div>
+				<div class="title">
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+				</div>
+			</div>
+					{%- else %}
+			<div class="sub-hasLink">
+				<div class="disclosure"><p></p></div>
+				<div class="title">
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+				</div>
+			</div>
 					{%- endif -%}
-				{%- else -%}
-					<div class="sub">
-						<div class="disclosure"><p></p></div>
-						<div class="title">
-							<p>{{ subMenuTitle }}</p>
-						</div>
-					</div>
+				{%- else %}
+			<div class="sub">
+				<div class="disclosure"><p></p></div>
+				<div class="title"><p>{{ subMenuTitle }}</p></div>
+			</div>
 				{%- endif -%}
-			{%- else -%}
-				<input type="checkbox" id="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
+			{%- else %}
+			<input type="checkbox" id="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
 				{%- if sortedSubMenuLinks[forloop.index0] != false -%}
-					{%- if sortedSubMenuUrls[forloop.index0] == page.url -%}
-						<div class="sub-isActivePage">
-							<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
-								<p class="symbol"><!-- will be filled by disclosure indicator --></p>
-							</label>
-							<div class="title">
-								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
-							</div>
-						</div>
-					{%- else -%}
-						<div class="sub-hasLink">
-							<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
-								<p class="symbol"><!-- will be filled by disclosure indicator --></p>
-							</label>
-							<div class="title">
-								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
-							</div>
-						</div>
+					{%- if sortedSubMenuUrls[forloop.index0] == page.url %}
+			<div class="sub-isActivePage">
+				<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
+					<p class="symbol"><!-- will be filled by disclosure indicator --></p>
+				</label>
+				<div class="title">
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+				</div>
+			</div>
+					{%- else %}
+			<div class="sub-hasLink">
+				<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
+					<p class="symbol"><!-- will be filled by disclosure indicator --></p>
+				</label>
+				<div class="title">
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+				</div>
+			</div>
 					{%- endif -%}
-				{%- else -%}
-					<div class="sub">
-						<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
-							<p class="symbol"><!-- will be filled by disclosure indicator --></p>
-						</label>
-						<div class="title">
-							<p>{{ subMenuTitle }}</p>
-						</div>
-					</div>
+				{%- else %}
+			<div class="sub">
+				<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
+					<p class="symbol"><!-- will be filled by disclosure indicator --></p>
+				</label>
+				<div class="title"><p>{{ subMenuTitle }}</p></div>
+			</div>
 				{%- endif -%}
 
-			    <!-- Sub sub menu items -->
+			    {%- comment -%}<!-- Sub sub menu items -->{%- endcomment -%}
+			    
 	    		{%- for subsubTitle in sortedSubsubMenuTitles -%}
 			    	{%- if sortedSubsubMenuLinks[forloop.index0] != false -%}
-				    	{%- if sortedSubsubMenuUrls[forloop.index0] == page.url -%}
-							<div class="subsub-isActivePage">
-								<div class="disclosure"><p></p></div>
-								<div class="title">
-									<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
-								</div>
-		    				</div>
-						{%- else -%}
-							<div class="subsub-hasLink">
-								<div class="disclosure"><p></p></div>
-								<div class="title">
-									<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
-								</div>
-		    				</div>
-						{%- endif -%}
-					{%- else -%}
-						<div class="subsub">
-							<div class="disclosure"><p></p></div>
-							<div class="title">
-								<p>{{ subsubTitle }}</p>
-							</div>
-		    			</div>
+				    	{%- if sortedSubsubMenuUrls[forloop.index0] == page.url %}
+			<div class="subsub-isActivePage">
+				<div class="disclosure"><p></p></div>
+				<div class="title">
+					<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
+				</div>
+    		</div>
+						{%- else %}
+			<div class="subsub-hasLink">
+				<div class="disclosure"><p></p></div>
+				<div class="title">
+					<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
+				</div>
+    		</div>
+						{% endif -%}
+					{%- else %}
+			<div class="subsub">
+				<div class="disclosure"><p></p></div>
+				<div class="title"><p>{{ subsubTitle }}</p></div>
+    		</div>
 					{%- endif -%}
 		    	{%- endfor -%}			
-    		{%- endif -%}
+    		{%- endif %}
 		</div>
-		
-	{%- endfor -%}
+	{%- endfor %}
 	</div>
 </nav>
-
-{%- endif -%}
+{%- endif %}
+<!-- end of include vertical-menu.html -->
