--- a/_includes/widgets/browser-info.html
+++ b/_includes/widgets/browser-info.html
@@ -1,3 +1,5 @@
+
+<!-- include browser-info.html -->
 <div class="browser-info">
 	<h1>Browser information:</h1>
 	<p>This website uses CSS3 & HTML5. It is recommended to use a modern browser with at least the following version number:</p>
@@ -11,3 +13,4 @@
 	</ul>
 	<p>Problems? please <a href="/pages/contact/contact.html">contact</a> me.</p>
 </div>
+<!-- end of include browser-info.html -->
