--- a/_includes/widgets/recent-posts.html
+++ b/_includes/widgets/recent-posts.html
@@ -1,3 +1,5 @@
+
+<!-- include recent-posts.html -->
 {%- if jekyll.environment != 'production' and site.data.setup.fast-content-build -%}{%- else -%}
 {%- comment -%}<!--
 
@@ -7,13 +9,14 @@ Configure the number of referenced posts by assigning a value to `number-of-rece
 
 Configure the text for the header message in "_data/text-for.yml" for the item `tRecent`.
 
--->{%- endcomment -%}
+-->{%- endcomment %}
 <div>
 	{%- assign recent = 'Recent' -%}
-	{%- if site.data.text-for.tRecent -%}{%- assign recent = site.data.text-for.tRecent -%}{%- endif -%}
+	{%- if site.data.text-for.tRecent -%}{%- assign recent = site.data.text-for.tRecent -%}{%- endif %}
 	<h1>{{ recent }}:</h1>
-	{%- for post in site.posts limit: site.data.setup.number-of-recent-posts-in-widget -%}
+	{%- for post in site.posts limit: site.data.setup.number-of-recent-posts-in-widget %}
 		<p><a href="{{ post.url }}">{%- if post.date -%}{{ post.date | date: "%F" }}{%- endif -%} {{ post.title }}</a></p>
-	{%- endfor -%}
+	{%- endfor %}
 </div>
-{%- endif -%}
+{%- endif %}
+<!-- end of include recent-posts.html -->
