--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,18 +2,19 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+	<header class="post-header">
+		<h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+		<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%F" }}</time>{%- if page.author -%} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{%- endif -%}</p>
+		{%- if page.image -%}<img class="image-float-right" src="{{ page.image }}">{%- endif %}
+	</header>
+	<div class="post-content" itemprop="articleBody">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%F" }}</time>{%- if page.author -%} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{%- endif -%}</p>
-	{%- if page.image -%}<img class="image-float-right" src="{{ page.image }}">{%- endif -%}
-  </header>
+<!-- Post content -->
+{{ content }}
+<!-- End post content -->
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
-
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
+	</div>
+	{%- if site.disqus.shortname -%}
+		{% include disqus-comments.html %}
+	{%- endif %}
 </article>
