--- a/_includes/widgets/social-media.html
+++ b/_includes/widgets/social-media.html
@@ -10,18 +10,20 @@ Configure the text for the header message in "_data/text-for.yml" for the item `
 
 -->{%- endcomment %}
 <div>
-	{%- assign message = 'Social Media & Resources' -%}
-	{%- if site.data.text-for.tSocialMediaResources -%}{%- assign message = site.data.text-for.tSocialMediaResources -%}{%- endif %}
+{%- assign message = 'Social Media & Resources' -%}
+{%- if site.data.text-for.tSocialMediaResources -%}
+	{%- assign message = site.data.text-for.tSocialMediaResources -%}
+{%- endif %}
 	<h1>{{ message }}:</h1>
-		{%- if site.github_username %}
+{%- if site.github_username %}
 		<div>
-			{% include widgets/social-media-res/icon-github.html username=site.github_username %}
+	{% include widgets/social-media-res/icon-github.html username=site.github_username %}
 		</div>
-		{%- endif -%}
-		{%- if site.twitter_username %}
+{%- endif -%}
+{%- if site.twitter_username %}
 		<div>
-			{% include widgets/social-media-res/icon-twitter.html username=site.twitter_username %}
+	{% include widgets/social-media-res/icon-twitter.html username=site.twitter_username %}
 		</div>
-		{%- endif %}
+{%- endif %}
 </div>
 <!-- end of include social-media.html -->
