--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,11 @@ Configuration:
 
 	<title>{%- if page.title -%}{{ page.title | escape }}{%- else -%}{{ site.title | escape }}{%- endif -%}</title>
 
-	{%- if page.excerpt -%}{%- assign description = page.excerpt -%}{%- else -%}{%- assign description = site.description -%}{%- endif %}
+	{%- if page.excerpt -%}
+		{%- assign description = page.excerpt -%}
+	{%- else -%}
+		{%- assign description = site.description -%}
+	{%- endif %}
 
 	<meta name="description" content="{{ description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
@@ -51,7 +55,7 @@ Configuration:
 	{%- comment -%}<!-- Include JQuery from google -->{%- endcomment -%}
 	
 	{%- if site.data.setup.use-separate-banner-menubar-file %}
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	{%- endif -%}
 
 	{%- comment -%}<!-- Include google analytics for production build and if necessary -->{%- endcomment -%}
@@ -64,7 +68,7 @@ Configuration:
 	{%- if jekyll.environment == 'production' -%}
 		{%- if site.data.setup.enable-cookies-policy -%}
 			{%- include widgets/cookie-consent.html -%}
-	{%- endif -%}
+		{%- endif -%}
 	{%- endif %}
 </head>
 <!-- end of include head.html -->
